[package]
name = "blinkie"
version = "0.1.0"
authors = ["defghij <defghij@arda>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "blinkie"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
path = "/home/clnorri/programming/avr-hal/arduino-hal"
version = "0.1.0"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.5.3"

[dependencies.atmega-hal]
path = "/home/clnorri/programming/avr-hal/mcu/atmega-hal"
version = "0.1.0"

[dependencies.avr-hal-generic]
path = "/home/clnorri/programming/avr-hal/avr-hal-generic"
version = "0.1.0"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
